--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/scout": "^10.10",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "typesense/typesense-php": "^4.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
